--- a/app/src/main/res/layout/price_calculation.xml
+++ b/app/src/main/res/layout/price_calculation.xml
@@ -129,37 +129,38 @@
 
     <Spinner
         android:id="@+id/adult_prices"
-        android:layout_width="100dp"
-        android:layout_height="39dp"
+        android:layout_width="103dp"
+        android:layout_height="41dp"
         android:layout_marginEnd="64dp"
         app:layout_constraintBottom_toTopOf="@+id/senior_text"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toEndOf="@+id/Adult_text"
         app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.625" />
+        app:layout_constraintVertical_bias="0.615" />
 
     <Spinner
         android:id="@+id/senior_prices"
-        android:layout_width="100dp"
-        android:layout_height="39dp"
+        android:layout_width="103dp"
+        android:layout_height="41dp"
         android:layout_marginTop="60dp"
         app:layout_constraintBottom_toBottomOf="@+id/senior_text"
         app:layout_constraintEnd_toEndOf="@+id/adult_prices"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/adult_prices"
         app:layout_constraintTop_toTopOf="@+id/adult_prices"
         app:layout_constraintVertical_bias="1.0" />
 
     <Spinner
         android:id="@+id/child_prices"
-        android:layout_width="100dp"
-        android:layout_height="39dp"
+        android:layout_width="103dp"
+        android:layout_height="41dp"
         android:layout_marginTop="28dp"
         app:layout_constraintBottom_toTopOf="@+id/ticketPrice"
         app:layout_constraintEnd_toEndOf="@+id/senior_prices"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/Adult_text"
+        app:layout_constraintStart_toEndOf="@+id/child_text"
         app:layout_constraintTop_toBottomOf="@+id/senior_prices"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.06" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
