--- a/app/src/main/res/layout/price_calculation.xml
+++ b/app/src/main/res/layout/price_calculation.xml
@@ -7,6 +7,31 @@
     android:background="#03071C">
 
     <TextView
+        android:id="@+id/adult_text"
+        android:layout_width="103dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/adult_price_text"
+        android:textAlignment="textStart"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+
+    <TextView
+        android:id="@+id/child_text"
+        android:layout_width="103dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="12dp"
+        android:text="@string/child_price_text"
+        android:textAlignment="textStart"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/senior_text"
+        app:layout_constraintTop_toBottomOf="@+id/senior_text" />
+
+    <TextView
         android:id="@+id/ticketPrice"
         android:layout_width="224dp"
         android:layout_height="46dp"
@@ -17,7 +42,7 @@
         android:textColorHint="#D0FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.524"
+        app:layout_constraintHorizontal_bias="0.914"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageButton"
         app:layout_constraintVertical_bias="0.119" />
@@ -45,10 +70,10 @@
         android:textColorHint="#E9FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/sales_tax"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/sales_tax"
         app:layout_constraintTop_toTopOf="@+id/sales_tax"
-        app:layout_constraintVertical_bias="0.041" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/museumTextView"
@@ -80,87 +105,90 @@
         app:layout_constraintVertical_bias="0.166"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <EditText
-        android:id="@+id/senior_text"
-        android:layout_width="103dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="60dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Senior $"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/Adult_text"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/Adult_text"
-        app:layout_constraintTop_toTopOf="@+id/Adult_text" />
-
-    <EditText
-        android:id="@+id/Adult_text"
-        android:layout_width="103dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="92dp"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=" Adult $"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/ticketPrice"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.006" />
-
-    <EditText
-        android:id="@+id/child_text"
-        android:layout_width="103dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="40dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:text=" Child $"
-        android:textAlignment="center"
-        android:textColor="#FFFFFF"
-        app:layout_constraintBottom_toTopOf="@+id/ticketPrice"
-        app:layout_constraintEnd_toEndOf="@+id/Adult_text"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/senior_text"
-        app:layout_constraintTop_toTopOf="@+id/senior_text" />
-
     <Spinner
         android:id="@+id/adult_prices"
         android:layout_width="103dp"
         android:layout_height="41dp"
-        android:layout_marginEnd="64dp"
-        app:layout_constraintBottom_toTopOf="@+id/senior_text"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="32dp"
+        android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.53"
-        app:layout_constraintStart_toEndOf="@+id/Adult_text"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton"
-        app:layout_constraintVertical_bias="0.615" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/adult_text"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
 
     <Spinner
         android:id="@+id/senior_prices"
         android:layout_width="103dp"
         android:layout_height="41dp"
-        android:layout_marginTop="60dp"
-        app:layout_constraintBottom_toBottomOf="@+id/senior_text"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="56dp"
+        android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="@+id/adult_prices"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/adult_prices"
-        app:layout_constraintTop_toTopOf="@+id/adult_prices"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toEndOf="@+id/senior_text"
+        app:layout_constraintTop_toTopOf="@+id/adult_prices" />
 
     <Spinner
         android:id="@+id/child_prices"
         android:layout_width="103dp"
         android:layout_height="41dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintBottom_toTopOf="@+id/ticketPrice"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="12dp"
+        android:textAlignment="textStart"
         app:layout_constraintEnd_toEndOf="@+id/senior_prices"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/child_text"
-        app:layout_constraintTop_toBottomOf="@+id/senior_prices"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintTop_toBottomOf="@+id/senior_prices" />
+
+    <TextView
+        android:id="@+id/senior_text"
+        android:layout_width="103dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/senior_price_text"
+        android:textAlignment="textStart"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/adult_text"
+        app:layout_constraintTop_toBottomOf="@+id/adult_text" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="120dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="236dp"
+        android:text="@string/ticket_total"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="120dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="64dp"
+        android:text="@string/sales_tax"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="120dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="128dp"
+        android:text="@string/total_price"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        app:layout_constraintEnd_toEndOf="@+id/textView5"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
